--- a/Time_series_Analysis_kaggle.ipynb
+++ b/Time_series_Analysis_kaggle.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtu08iOFVSjBnn7TxvD1p7",
+      "authorship_tag": "ABX9TyNRfjyKY+pkQe8sp/HZO41+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,50 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/brook0616/BK_Data-Science-and-AI-2024/blob/main/Time_series_Analysis_kaggle.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! pip install -q kaggle\n",
+        "from google.colab import files\n",
+        "files.upload()\n",
+        "! mkdir ~/.kaggle\n",
+        "! cp kaggle.json ~/.kaggle/\n",
+        "! cp kaggle.json ~/.kaggle/\n",
+        "! chmod 600 ~/.kaggle/kaggle.json\n",
+        "! kaggle datasets list\n",
+        "! kaggle competitions download <name-of-competition>\n",
+        "!kaggle datasets list\n",
+        "!find / -name \"holidays_events.csv\"\n",
+        "!kaggle datasets list | head -n 1 && kaggle datasets list | tail -n +2 | sort -k 3n\n",
+        "!kaggle datasets list | wc -l\n",
+        "! kaggle competitions download -c 'store-sales-time-series-forecasting'\n",
+        "!pwd\n",
+        "!unzip store-sales-time-series-forecasting.zip -d .\n",
+        "!mkdir -p /content/drive/MyDrive/my_Kaggle_data/\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "%cd /content/drive/MyDrive/my_Kaggle_data/\n",
+        "!kaggle competitions download -c store-sales-time-series-forecasting -p /content/drive/MyDrive/my_Kaggle_data/\n",
+        "!pwd\n",
+        "\n",
+        "###  re written to the actual diurectory \n",
+        "\n",
+        "test_df = pd.read_csv('/content/drive/MyDrive/my_Kaggle_data/test.csv')\n",
+        "oil_df = pd.read_csv('/content/drive/MyDrive/my_Kaggle_data/oil.csv')\n",
+        "transaction_df = pd.read_csv('/content/drive/MyDrive/my_Kaggle_data/transactions.csv')\n",
+        "stores_df = pd.read_csv('/content/drive/MyDrive/my_Kaggle_data/stores.csv')\n",
+        "holiday_event_df = pd.read_csv('/content/drive/MyDrive/my_Kaggle_data/holidays_events.csv') \n",
+        "train_df = pd.read_csv('/content/drive/MyDrive/my_Kaggle_data/train.csv')\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WTnOIcM23zqj"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -547,7 +591,7 @@
         "id": "CVsHg-bhDvyP",
         "outputId": "afe79385-cfb5-4d3b-d50b-4fd8c7a8971d"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +614,7 @@
         "id": "5FWvFwKPD-IT",
         "outputId": "df576350-ccc3-4381-959b-00364d29eb4c"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +644,7 @@
         "id": "X5FWKpE5ECWC",
         "outputId": "5747da5a-3e3b-4e1d-b5a3-d9776bd24c6b"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -660,7 +704,7 @@
         "id": "yJ2TciA3-Oqt",
         "outputId": "a6583e9e-15e6-419c-c10e-4052f6f912bf"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +723,7 @@
       "metadata": {
         "id": "4ptf10i_Cxwl"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -704,7 +748,7 @@
         "id": "_tSmKW1SA3dJ",
         "outputId": "a273169b-a9f3-466e-a436-f641e640abc3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,7 +771,7 @@
         "id": "hftEMYd0CmXt",
         "outputId": "e2526e68-7c9f-4193-d663-e84a2ec364d1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +794,7 @@
         "id": "xxEA9zSHC7au",
         "outputId": "21a0fdff-363e-46b6-b12e-829b22129bb7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +840,7 @@
         "id": "2es3jJA-DLSr",
         "outputId": "2dfd86cc-0f4f-4da4-9747-12952de6918a"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -830,7 +874,7 @@
         "id": "rlDKaqZw82yi",
         "outputId": "c81d789f-822f-4367-bf2a-cee95bcff556"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +904,7 @@
       "metadata": {
         "id": "rqMfRHhE8KLc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -896,7 +940,7 @@
       "metadata": {
         "id": "5Mv-b3bUFWaq"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -917,7 +961,7 @@
         "id": "2dzJesTKFoR1",
         "outputId": "6b327e1d-a35f-4bd7-f21e-e2180fee16ca"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1111,7 +1155,7 @@
         "id": "ul2qEISYFups",
         "outputId": "e8813d49-48e9-45db-c2e5-1847aee40851"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1293,7 +1337,7 @@
         "id": "--nq5H3SLO8n",
         "outputId": "5f99f837-50c3-4428-da68-573ec3a077dc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1457,7 +1501,7 @@
         "id": "ubQMI9r4LagZ",
         "outputId": "f3f926af-9d52-492a-e3c8-698ac047e358"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1627,7 +1671,7 @@
         "id": "tFWHuWJ6LdLk",
         "outputId": "3717e756-0e22-4802-fe90-6799f379091a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1809,7 +1853,7 @@
         "id": "lQuMVLliLf7y",
         "outputId": "32ec8aed-258c-4c88-df59-d8318b5f16ae"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2011,7 +2055,7 @@
       "metadata": {
         "id": "eNl5swl6PDrE"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2027,7 +2071,7 @@
         "id": "d-M0x_8D8jEC",
         "outputId": "9111bea2-93a5-4d45-d4c0-eea4e2989fe7"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2244,7 +2288,7 @@
         "id": "k2_65RMb8p1L",
         "outputId": "0805e7ff-fb63-40b7-d0f2-1399c06be799"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2289,7 +2333,7 @@
         "id": "K8sZv1e986tA",
         "outputId": "47d8bec0-7a43-4c3f-a69c-1d8325460353"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2335,7 +2379,7 @@
         "id": "GbKXUHu-9MpO",
         "outputId": "689a8233-0d8b-461f-f61d-70a516605cf1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2374,7 +2418,7 @@
       "metadata": {
         "id": "x1SzBkHq9jev"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2389,7 +2433,7 @@
         "id": "z0QYlHf_9skN",
         "outputId": "faa9eeb4-2723-4d60-ff2f-847e5e85df9c"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2428,7 +2472,7 @@
         "id": "VPvX2PUr9vHQ",
         "outputId": "40a48137-6bf9-4eed-834b-3aed0e64425c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2457,7 +2501,7 @@
         "id": "dCagJT8q96ug",
         "outputId": "30686a10-8558-467b-88c4-de2af2b7cdeb"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2485,7 +2529,7 @@
         "id": "opC_Vkxp-BEI",
         "outputId": "752be135-885e-46bd-bb17-497221994fd7"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2796,7 +2840,7 @@
         "id": "_7tPyjKK-FLC",
         "outputId": "608d6f4e-30cf-4494-ae52-a7eb6364f627"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2822,7 +2866,7 @@
         "id": "FtQF2W3C-OY-",
         "outputId": "3cae936c-5dad-431a-e845-28391196aaa9"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2848,7 +2892,7 @@
         "id": "Gh8Bp8bQ-VR8",
         "outputId": "09e3a97c-e1df-44ad-ffee-b3b5368b686a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2888,7 +2932,7 @@
         "id": "R1w0wSeB-YKh",
         "outputId": "216b4789-e126-4ce1-e1d0-fc0c105732d7"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3098,7 +3142,7 @@
         "id": "6GmFA2oN-zTU",
         "outputId": "3b4f5305-f802-47e3-9756-a839dbc7375a"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3173,7 +3217,7 @@
         "id": "Vg1UWLFD-7qe",
         "outputId": "c36c9d66-abeb-46ec-dbca-d212033b66ba"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3214,7 +3258,7 @@
         "id": "50TfcfW-_c9P",
         "outputId": "5895dc57-4ff4-4f3a-d57a-3742ee1ef024"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3267,7 +3311,7 @@
         "id": "PiCdwhKLASWT",
         "outputId": "d3408a33-a252-4ef9-b049-a465d884eaa4"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3312,7 +3356,7 @@
         "id": "hYxhxL8sArgd",
         "outputId": "6c9a2efe-a75d-47f2-b65a-4c76e6e08481"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3353,7 +3397,7 @@
         "id": "DRUzMqXkBVdN",
         "outputId": "03111a13-bf08-4bc7-874f-ae645e99de7a"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3401,7 +3445,7 @@
         "id": "qe9hpZdhBj3a",
         "outputId": "4dfe3097-2aed-4e51-c93e-f917350de26e"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3451,7 +3495,7 @@
         "id": "62upiJK9FEDu",
         "outputId": "00d4de50-ef75-4038-90e5-22ae5a7d31a5"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3512,7 +3556,7 @@
         "id": "a-CK9i9LFTJw",
         "outputId": "fe51a094-3446-40e5-aff0-811ae684b5f1"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3550,7 +3594,7 @@
       "metadata": {
         "id": "g4kbo9d5GA_n"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3566,7 +3610,7 @@
         "id": "xChAzo_1GWog",
         "outputId": "e5d86ac7-d9e4-4bb8-a34e-a2cce8417052"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3856,7 +3900,7 @@
         "id": "8HQ93u-rGlHr",
         "outputId": "2d560fe8-add9-46bd-bd00-201b120876ec"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3892,7 +3936,7 @@
         "id": "SqGmjFz3G65v",
         "outputId": "7660dee9-dcf1-4bd1-f4bd-b9d80bd44182"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3954,7 +3998,7 @@
         "id": "IDZqdkOOHMF1",
         "outputId": "226bd208-eff0-496f-b281-bcdd7d39a745"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3987,7 +4031,7 @@
         "id": "G92mddtqHczc",
         "outputId": "1229f267-1511-41dc-dce6-0fb10196376b"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4032,7 +4076,7 @@
         "id": "mTaw4ULhHmug",
         "outputId": "430a8789-c9d5-49f5-c27b-52056f201590"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4081,7 +4125,7 @@
       "metadata": {
         "id": "rYooOGbpIDIN"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4092,7 +4136,7 @@
       "metadata": {
         "id": "kehIqqpPIHIn"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4107,7 +4151,7 @@
         "id": "tr1Phq3eIItg",
         "outputId": "6a2d9eac-8c71-43ed-b76c-74507994734d"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4137,7 +4181,7 @@
       "metadata": {
         "id": "rAl7OBF-IP8e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4149,7 +4193,7 @@
       "metadata": {
         "id": "OQsToPFrIi8y"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4164,7 +4208,7 @@
         "id": "Za04B7Q9IlfZ",
         "outputId": "0e08c3a3-04c0-4846-cdca-bbe68f66cbb5"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4199,7 +4243,7 @@
         "id": "Or5cvAzzIrLn",
         "outputId": "b828d141-f0ac-44d4-9919-4a9a0f1a6e7b"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4384,7 +4428,7 @@
         "id": "kLj0QBjxIxE1",
         "outputId": "3d2777de-e895-462e-9c1e-dadf5365704b"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4441,7 +4485,7 @@
       "metadata": {
         "id": "rVto4p17JLTH"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4463,7 +4507,7 @@
         "id": "N7CIB3t_JX7T",
         "outputId": "c7b4f7d4-aa2f-4222-ef86-2ac5032141ca"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4524,7 +4568,7 @@
         "id": "3oimmk1WJrta",
         "outputId": "dd1dfde0-9c6b-4480-b93d-b08099750d81"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4589,7 +4633,7 @@
         "id": "rTqW-FOzJ5o8",
         "outputId": "ae0bfb23-0e02-4b58-c6ff-e7bf0b69af3c"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4632,7 +4676,7 @@
       "metadata": {
         "id": "V2fR4RSRKOot"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4646,7 +4690,7 @@
       "metadata": {
         "id": "KKCwanJhKYd5"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4662,7 +4706,7 @@
         "id": "MFqrNv22Kd8V",
         "outputId": "8a4d8207-f50e-4c03-e2b8-0c47a030f5a5"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4716,7 +4760,7 @@
         "id": "hTJj3Y5YKkGh",
         "outputId": "840b5d5e-1a9f-4077-d622-7a925b8dd27e"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4736,7 +4780,7 @@
       "metadata": {
         "id": "G5rEwmH5KmvU"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4762,7 +4806,7 @@
         "id": "OPcJl-QNKtD0",
         "outputId": "4f7149c5-1cfd-46fe-b606-55b161a22524"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4788,7 +4832,7 @@
       "metadata": {
         "id": "1ZwCjZ7QKx8X"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     }
   ]
